# minitalk

./: CMakeLists.txt  README.md  client  client.c  client1  client1.c  minitalk.h  server  server.c  server1
evaluated_project/: Makefile
evaluated_project/src/: client.c  minitalk.h
evaluated_project/src_bonus/: client_bonus.c  minitalk_bonus.h  server_bonus.c
without_comments/: Makefile  minitalk.h  server.c
working mess/: minitalk.h  server.c
working mess/printf/: Makefile
working mess/samples/: server1.c
working mess/without_comments/: server.c
